# ft_ls

./: .gitignore  CMakeLists.txt  Ft_ls  Makefile  ft_ls  todo
build_debug/: CMakeCache.txt  Makefile  cmake_install.cmake
build_debug/lib/: Makefile  cmake_install.cmake
build_debug/lib/Printf/: Makefile  cmake_install.cmake
build_debug/lib/Printf/src/: Makefile  cmake_install.cmake
build_debug/src/: Makefile  cmake_install.cmake
inc/: directory.h  error.h  ft_ls.h  main.h  output.h  parser.h  utils.h  vector.h
inc/Libft/: Makefile  test
inc/Libft/inc/: libft.h
inc/Libft/src/Ft_printf/: ft_output.c  ft_printf.c  measure_functions.c
lib/: CMakeLists.txt
lib/Printf/: CMakeLists.txt
lib/Printf/inc/: printf.h
lib/Printf/src/: CMakeLists.txt  measure_functions.c  output.c  printf.c  utils.c
lib/ft_Printf/: CMakeLists.txt
lib/ft_Printf/inc/: ft_printf.h
lib/ft_Printf/src/: CMakeLists.txt  output.c  printf.c  utils.c
lib/libft/: CMakeLists.txt
lib/libft/inc/: libft.h
lib/libft/src/: CMakeLists.txt  ft_math.c  ft_memory.c  ft_strings.c
src/: CMakeLists.txt  directory.c  error.c  main.c  output.c  parser.c  utils.c  vector.c
test/: test.json  test.py
